Fixed horizontal scroll-bar problem, root and footer widths in vw changed to % in css

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 @import "./sassStyles/mixins";
 
 #root {
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
 }
 
@@ -45,12 +45,12 @@ header {
 }
 
 .container-page {
-  width: 86.2vw;
+  width: 86.2%;
   max-width: 1240px;
   margin: 0px auto;
   box-sizing: border-box;
   @include mobile {
-    width: 100vw;
+    width: 100%;
     padding: 0px 20px;
   }
 }
@@ -58,7 +58,7 @@ header {
 footer {
   margin-top: 50px;
   padding-top: 4.5vw;
-  width: 100vw;
+  width: 100%;
   height: 210px;
   color: white;
   background-color: black;
